--- a/views/citas.pug
+++ b/views/citas.pug
@@ -2,5 +2,38 @@ extends ./layout/index
 
 block contenido
     main.container.mt-5 
+        h1= pagina
         .row 
-            h1= pagina
+            .col-md-5 
+                img(src="img/citas.jpg", width='400px',class="img-fluid")
+            .col-md-7
+                <form>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Nombre del paciente</label>
+                    <input type="text" class="form-control" id="nombrePaciente" placeholder="Nombre del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Nombre del Doctor</label>
+                    <input type="text" class="form-control" id="nombreDoctor" placeholder="Nombre del doctor">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Documento de identidad</label>
+                    <input type="text" class="form-control" id="documento" placeholder="Documento de identidad">
+                </div>
+
+                <div> 
+                    <select class="form-control form-control">
+                    <option>Especialidad</option>
+                    <option>Medicina General</option>
+                    <option>Medicina Interna</option>
+                    <option>Dermatología</option>
+                    <option>Rehabilitación física</option>
+                    <option>Psicología</option>
+                    <option>Odontología</option>
+                    <option>Radiología</option>
+                    </select>
+                </div>
+
+                <button type="submit" class="btn btn-primary mt-2">Registrar Cita</button>
+                </form>
+            
