--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,17 +1,18 @@
 header
     .navegacion
         .container
-            .row.justify-content-center.justify-content-md-between.align-items-center.py-4
+            .row.justify-content-center.justify-content-sm-between.align-items-center.py-2
                 .col-md-4.col-6
                     a(href="/")
                         img(src="/img/miLogo1.jpg",width="120px" alt="logo")
 
                 .col-md-4.col-6 
-                    nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end
+                    nav.mt-5.mt-sm-0.nav.justify-content-center.justify-content-md-end
                         a.nav-link(href="/") Clínica UniDist
     
                 .col-md-8
                     nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end
+                        a.nav-link(href="/") Doctores
                         a.nav-link(href="/pacientes") Pacientes
                         a.nav-link(href="/citas") Citas
   
