--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -13,7 +13,6 @@ html(lang="en")
     body
         include header
         block contenido
-
-        //- img(src="img/img1.jpg", width='250px')
+        include iconos
 
         include footer
