--- a/views/pacientes.pug
+++ b/views/pacientes.pug
@@ -2,5 +2,46 @@ extends ./layout/index
 
 block contenido
     main.container.mt-5 
+        h1= pagina
         .row 
-            h1= pagina
+            .col-md-5 
+                img(src="img/pacientes.jpg", width='400px',class="img-fluid")
+            .col-md-7
+                <form>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Nombres</label>
+                    <input type="text" class="form-control" id="nombres" placeholder="Nombres">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Apellidos</label>
+                    <input type="text" class="form-control" id="apellidos" placeholder="Apellidos">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Documento de identidad</label>
+                    <input type="text" class="form-control" id="documento" placeholder="Documento de identidad">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Edad</label>
+                    <input type="text" class="form-control" id="edad" placeholder="Edad">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Teléfono</label>
+                    <input type="text" class="form-control" id="telefono" placeholder="Teléfono">
+                </div>
+
+                <div> 
+                    <select class="form-control form-control">
+                    <option>Especialidad</option>
+                    <option>Medicina General</option>
+                    <option>Medicina Interna</option>
+                    <option>Dermatología</option>
+                    <option>Rehabilitación física</option>
+                    <option>Psicología</option>
+                    <option>Odontología</option>
+                    <option>Radiología</option>
+                    </select>
+                </div>
+
+                <button type="submit" class="btn btn-primary mt-2">Enviar</button>
+                </form>
+            
