--- a/views/citas.pug
+++ b/views/citas.pug
@@ -7,33 +7,38 @@ block contenido
             .col-md-5 
                 img(src="img/citas.jpg", width='400px',class="img-fluid")
             .col-md-7
-                <form>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Nombre del paciente</label>
-                    <input type="text" class="form-control" id="nombrePaciente" placeholder="Nombre del paciente">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Nombre del Doctor</label>
-                    <input type="text" class="form-control" id="nombreDoctor" placeholder="Nombre del doctor">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Documento de identidad</label>
-                    <input type="text" class="form-control" id="documento" placeholder="Documento de identidad">
-                </div>
+                form(action="/" method="POST")
+                    .form-group 
+                        label(for="nombre") Nombre del paciente 
+                        input#nombre(type="text", placeholder="Nombre", name="nombrePaciente", class="form-control") 
 
-                <div> 
-                    <select class="form-control form-control">
-                    <option>Especialidad</option>
-                    <option>Medicina General</option>
-                    <option>Medicina Interna</option>
-                    <option>Dermatología</option>
-                    <option>Rehabilitación física</option>
-                    <option>Psicología</option>
-                    <option>Odontología</option>
-                    <option>Radiología</option>
-                    </select>
-                </div>
+                    .form-group 
+                        label(for="nombreDoctor") Nombre del Doctor
+                        input#nombre(type="text", placeholder="Apellido", name="nombreDoctor", class="form-control")
+                    .form-group 
+                        label(for="especialidad") Especialidad 
+                        <select class="form-control form-control" name="especialidad"  >
+                            <option>Especialidad</option>
+                            <option>Medicina General</option>
+                            <option>Medicina Interna</option>
+                            <option>Dermatología</option>
+                            <option>Rehabilitación física</option>
+                            <option>Psicología</option>
+                            <option>Odontología</option>
+                            <option>Radiología</option>
+                        </select>
 
-                <button type="submit" class="btn btn-primary mt-2">Registrar Cita</button>
-                </form>
-            
+                    .form-group 
+                        label(for="documento") Documento de identidad 
+                        input#nombre(type="text", placeholder="Documento", name="documento", class="form-control") 
+                        
+                    input.btn.btn-success.btn-block(type="submit")
+                        
+                        
+
+
+
+
+
+
+                
