--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -14,38 +14,41 @@ block contenido
             .col-md-5 
                 img(src="img/img1.jpg", width='400px',class="img-fluid")
             .col-md-7
-                <form method="post" action="/">
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Nombres</label>
-                    <input type="text" class="form-control" id="nombres" placeholder="Nombres" value=nombres>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Apellidos</label>
-                    <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" value=apellidos>
-                </div>
+                form(action="/" method="POST") 
+                        .form-group 
+                            label(for="nombre") Nombre 
+                            input#nombre(type="text", placeholder="Nombre", name="nombres", class="form-control", value=nombres) 
 
-                <select class="form-control form-control" name="especialidad" id="especialidad" value=especialidad>
-                <option>Especialidad</option>
-                <option>Medicina General</option>
-                <option>Medicina Interna</option>
-                <option>Dermatología</option>
-                <option>Rehabilitación física</option>
-                <option>Psicología</option>
-                <option>Odontología</option>
-                <option>Radiología</option>
-                </select>
+                        .form-group 
+                            label(for="correo") Apellido
+                            input#nombre(type="text", placeholder="Apellido", name="apellidos", class="form-control",value=apellidos )
 
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Consultorio</label>
-                    <input type="text" class="form-control" id="consultorio" placeholder="Consultorio" value=consultorio>
-                </div>
+                        .form-group 
+                            label(for="especialidad") Especialidad 
+                            <select class="form-control form-control" name="especialidad"  >
+                                <option>Especialidad</option>
+                                <option>Medicina General</option>
+                                <option>Medicina Interna</option>
+                                <option>Dermatología</option>
+                                <option>Rehabilitación física</option>
+                                <option>Psicología</option>
+                                <option>Odontología</option>
+                                <option>Radiología</option>
+                            </select>
 
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email" value=email>
-                    <small id="emailHelp" class="form-text text-muted">Nosotros no compartiremos su correo con personal no autorizado.</small>
-                </div>
+                        .form-group 
+                            label(for="correo") Consultorio 
+                            input#nombre(type="text", placeholder="Consultorio", name="consultorio", class="form-control",value=consultorio) 
 
-                <button type="submit" class="btn btn-primary">Registrar Doctor</button>
-                </form>
-            
+                        .form-group 
+                            label(for="correo") Email 
+                            input#nombre(type="text", placeholder="Email", name="email", class="form-control",value=email) 
+                        
+                        input.btn.btn-success.btn-block(type="submit")
+                        
+
+
+
+
+
+                
