mostrando lista de doctores

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,12 +171,12 @@ i {
     font-size: 2rem;
 }
 
-.testimoniales p {
+.doctores p {
     font-size: .8rem;
     font-weight: normal;
 }
 
-.testimoniales p::before {
+.doctores p::before {
     background-image: url(../img/quote.jpg);
     background-repeat: no-repeat;
     background-position: center center;
