--- a/views/pacientes.pug
+++ b/views/pacientes.pug
@@ -3,11 +3,31 @@ extends ./layout/index
 block contenido
     main.container.mt-5 
         h1= pagina
-        .row 
+
+        h3.text-center Nuestros Pacientes
+        
+        .row.doctores
+            
+            each paciente in pacientes      
+                .col-md-6.col-lg-4.mb2
+                    .card 
+                        .card-body
+                            blockquote.blockquote
+                                p.mb-0
+                                    h6 Nombres: #{JSON.stringify(paciente.nombres)}
+                                    h6 Apellidos: #{JSON.stringify(paciente.apellidos)}
+                                    h6 Documento: #{JSON.stringify(paciente.documento)}
+                                    h6 Especialidad: #{JSON.stringify(paciente.especialidad)}
+                                    h6 Edad: #{JSON.stringify(paciente.edad)}
+                                    h6 Teléfono: #{JSON.stringify(paciente.telefono)}
+                                footer.blockquote-footer
+                                    h6 Paciente: #{JSON.stringify(paciente.nombres)}  
+
+        .row.mt-5
             .col-md-5 
                 img(src="img/pacientes.jpg", width='400px',class="img-fluid")
             .col-md-7           
-                form(action="/" method="POST") 
+                form(action="/pacientes" method="POST") 
                         .form-group 
                             label(for="nombres") Nombre 
                             input#nombre(type="text", placeholder="Nombre", name="nombres", class="form-control", required) 
@@ -17,8 +37,8 @@ block contenido
                             input#nombre(type="text", placeholder="Apellido", name="apellidos", class="form-control", required)
 
                         .form-group 
-                            label(for="documento") Documento de identidad 
-                            input#nombre(type="text", placeholder="Documento", name="documento", class="form-control", required) 
+                            label(for="id_numeroCedula") Documento de identidad 
+                            input#nombre(type="text", placeholder="Documento", name="id_numeroCedula", class="form-control", required) 
 
                         .form-group 
                             label(for="edad") Edad 
