--- a/views/pacientes.pug
+++ b/views/pacientes.pug
@@ -37,8 +37,8 @@ block contenido
                             input#nombre(type="text", placeholder="Apellido", name="apellidos", class="form-control", required)
 
                         .form-group 
-                            label(for="id_numeroCedula") Documento de identidad 
-                            input#nombre(type="text", placeholder="Documento", name="id_numeroCedula", class="form-control", required) 
+                            label(for="documento") Documento de identidad 
+                            input#nombre(type="text", placeholder="Documento", name="documento", class="form-control", required) 
 
                         .form-group 
                             label(for="edad") Edad 
